--- a/src/productFeature.styles.scss
+++ b/src/productFeature.styles.scss
@@ -81,12 +81,10 @@
 
     @include phone {
       width: 100%;
-      margin-bottom: 25px;
     }
 
     @include smallPhone {
       width: 100%;
-      margin-bottom: 25px;
     }
   }
 
